Fix alt-tab on fullscreen task manager

Currently for fullscreen window, Ash lets the browser or apps to process
the accelerator first. However, focus_manager handles "alt-tab" as a
"Tab" traversal key event. This cl fixes this bug.

Bug: 832739
Test: New test FocusManagerTest.IsTabTraversalKeyEvent
Change-Id: I6252a5614390223c581d032d39dbad1c84de6b48
Reviewed-on: https://chromium-review.googlesource.com/1014651
Commit-Queue: Tao Wu <wutao@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551377}
Former-commit-id: 42d3c3dc87ff12584cf07d02b2433a6ca55d7366